--- a/examples/jla_sne-restore.ipynb
+++ b/examples/jla_sne-restore.ipynb
@@ -34,9 +34,6 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('/Users/justinalsing/Dropbox/science/pydelfi-tf2/pydelfi/pydelfi')\n",
-    "\n",
     "import numpy as np\n",
     "import simulators.jla_supernovae.jla_simulator as jla\n",
     "import ndes as ndes\n",
@@ -185,7 +182,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NDEs = [ndes.ConditionalMaskedAutoregressiveFlow(n_parameters=6, n_data=6, n_mades=5, n_hidden=[50,50], activations=[tf.tanh, tf.tanh])]"
+    "NDEs = [ndes.ConditionalMaskedAutoregressiveFlow(\n",
+    "            n_parameters=6,\n",
+    "            n_data=6,\n",
+    "            n_mades=5,\n",
+    "            n_hidden=[30,30], \n",
+    "            activation=tf.keras.layers.LeakyReLU(0.01),\n",
+    "            kernel_initializer=tf.keras.initializers.RandomNormal(mean=0.0, stddev=1e-5, seed=None),\n",
+    "            all_layers=True)]\n",
+    "\n",
+    "NDEs += [ndes.MixtureDensityNetwork(\n",
+    "            n_parameters=6,\n",
+    "            n_data=6, \n",
+    "            n_components=i+1,\n",
+    "            n_hidden=[30], \n",
+    "            activation=tf.keras.layers.LeakyReLU(0.01))\n",
+    "        for i in range(5)]\n",
+    "\n",
+    "NDEs += [ndes.SinhArcSinhMADE(\n",
+    "            n_parameters=6,\n",
+    "            n_data=6,\n",
+    "            n_hidden=[64],\n",
+    "            activation=tf.tanh,\n",
+    "            kernel_initializer=tf.keras.initializers.RandomNormal(mean=0.0, stddev=1e-5, seed=None),\n",
+    "            bias_initializer=tf.keras.initializers.RandomNormal(mean=0.0, stddev=1e-5, seed=None)\n",
+    "        )]"
    ]
   },
   {
@@ -208,13 +229,17 @@
    "outputs": [],
    "source": [
     "DelfiEnsemble = delfi.Delfi(compressed_data, prior, NDEs, \n",
-    "                            Finv = Finv, \n",
-    "                            theta_fiducial = theta_fiducial, \n",
-    "                            param_limits = [lower, upper],\n",
-    "                            param_names = ['\\\\Omega_m', 'w_0', 'M_\\mathrm{B}', '\\\\alpha', '\\\\beta', '\\\\delta M'], \n",
-    "                            results_dir = \"simulators/jla_supernovae/results/\",\n",
+    "                            Finv=Finv, \n",
+    "                            theta_fiducial=theta_fiducial, \n",
+    "                            param_names=['\\\\Omega_m', 'w_0', 'M_\\mathrm{B}', '\\\\alpha', '\\\\beta', '\\\\delta M'], \n",
+    "                            results_dir=\"simulators/jla_supernovae/results\",\n",
+    "                            filename=\"jla\",\n",
+    "                            optimiser=tf.keras.optimizers.Adam(lr=1e-4),\n",
+    "                            optimiser_arguments=None,\n",
+    "                            dtype=tf.float32,\n",
+    "                            posterior_chain_length=200,\n",
+    "                            nwalkers=500,\n",
     "                            input_normalization=\"fisher\",\n",
-    "                            save=True,\n",
     "                            restore=True,\n",
     "                            restore_filename=\"restore\")"
    ]
