--- a/examples/cosmic_shear.ipynb
+++ b/examples/cosmic_shear.ipynb
@@ -151,12 +151,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NDEs = [ndes.ConditionalMaskedAutoregressiveFlow(n_parameters=5, n_data=5, n_hidden=[50,50], n_mades=5, activations=[tf.tanh, tf.tanh]),\n",
-    "        ndes.MixtureDensityNetwork(n_parameters=5, n_data=5, n_components=1, n_hidden=[30,30], activations=[tf.tanh, tf.tanh]),\n",
-    "        ndes.MixtureDensityNetwork(n_parameters=5, n_data=5, n_components=2, n_hidden=[30,30], activations=[tf.tanh, tf.tanh]),\n",
-    "        ndes.MixtureDensityNetwork(n_parameters=5, n_data=5, n_components=3, n_hidden=[30,30], activations=[tf.tanh, tf.tanh]),\n",
-    "        ndes.MixtureDensityNetwork(n_parameters=5, n_data=5, n_components=4, n_hidden=[30,30], activations=[tf.tanh, tf.tanh]),\n",
-    "        ndes.MixtureDensityNetwork(n_parameters=5, n_data=5, n_components=5, n_hidden=[30,30], activations=[tf.tanh, tf.tanh])]"
+    "NDEs = [ndes.ConditionalMaskedAutoregressiveFlow(\n",
+    "            n_parameters=5,\n",
+    "            n_data=5,\n",
+    "            n_mades=5,\n",
+    "            n_hidden=[30,30], \n",
+    "            activation=tf.keras.layers.LeakyReLU(0.01),\n",
+    "            kernel_initializer=tf.keras.initializers.RandomNormal(mean=0.0, stddev=1e-5, seed=None),\n",
+    "            all_layers=True)]\n",
+    "\n",
+    "NDEs += [ndes.MixtureDensityNetwork(\n",
+    "            n_parameters=5,\n",
+    "            n_data=5, \n",
+    "            n_components=i+1,\n",
+    "            n_hidden=[30], \n",
+    "            activation=tf.keras.layers.LeakyReLU(0.01))\n",
+    "        for i in range(5)]\n",
+    "\n",
+    "NDEs += [ndes.SinhArcSinhMADE(\n",
+    "            n_parameters=5,\n",
+    "            n_data=5,\n",
+    "            n_hidden=[64],\n",
+    "            activation=tf.tanh,\n",
+    "            kernel_initializer=tf.keras.initializers.RandomNormal(mean=0.0, stddev=1e-5, seed=None),\n",
+    "            bias_initializer=tf.keras.initializers.RandomNormal(mean=0.0, stddev=1e-5, seed=None)\n",
+    "        )]"
    ]
   },
   {
@@ -172,11 +191,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DelfiEnsemble = delfi.Delfi(compressed_data, prior, NDEs, Finv=Finv, theta_fiducial=theta_fiducial, \n",
-    "                       param_limits = [lower, upper],\n",
-    "                       param_names = ['\\Omega_m', 'S_8', '\\Omega_b', 'h', 'n_s'], \n",
-    "                       results_dir = \"simulators/cosmic_shear/results/\",\n",
-    "                       input_normalization='fisher')"
+    "DelfiEnsemble = delfi.Delfi(compressed_data, prior, NDEs, \n",
+    "                            Finv=Finv, \n",
+    "                            theta_fiducial=theta_fiducial,\n",
+    "                            param_limits = [lower, upper],\n",
+    "                            param_names=['\\Omega_m', 'S_8', '\\Omega_b', 'h', 'n_s'], \n",
+    "                            results_dir=\"simulators/cosmic_shear/results\",\n",
+    "                            filename=\"cosmic_shear\",\n",
+    "                            optimiser=tf.keras.optimizers.Adam(lr=1e-4),\n",
+    "                            optimiser_arguments=None,\n",
+    "                            dtype=tf.float32,\n",
+    "                            posterior_chain_length=200,\n",
+    "                            nwalkers=500,\n",
+    "                            input_normalization=\"fisher\")"
    ]
   },
   {
@@ -224,7 +251,7 @@
     }
    ],
    "source": [
-    "DelfiEnsemble.fisher_pretraining(mode=\"samples\")"
+    "DelfiEnsemble.fisher_pretraining(n_batch=5000, epochs=1000, patience=20, plot=True)"
    ]
   },
   {
@@ -246,7 +273,7 @@
     "n_populations = 39\n",
     "\n",
     "# Do the SNL training\n",
-    "DelfiEnsemble.sequential_training(simulator, compressor, n_initial, n_batch, n_populations, patience=10, save_intermediate_posteriors=True)"
+    "DelfiEnsemble.sequential_training(simulator, compressor, n_initial, n_batch, n_populations, patience=10, plot=True, save_intermediate_posteriors=True)"
    ]
   }
  ],
